cargo-features = ["codegen-backend"]

[package]
name = "bevy_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
mcp3208 = "0.1.0"
rand = "0.8.5"
rs_ws281x = "0.5.1"

[unstable]
codegen-backend = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 2
codegen-backend = "cranelift"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
codegen-backend = "llvm"

